# ros-tanksim

./: CMakeLists.txt  README.md  othermakelist.txt  package.xml
assets/: t90b.mtl  wtf.mtl
launch/: tanksim.launch
msg/: actuator.msg  info.msg  sensor.msg
shaders/: instancing.vs.glsl
src/: tanksim_controller.cpp  tanksim_planner.cpp  tanksim_simulator.cpp  ts_simulator.cpp
srv/: link.srv
